# MiniRouter

./: README.md  meson.build
.github/workflows/: codeql.yml
src/: encoder-to-qr.py  main.py  meson.build  minirouter.in
